# rust-game-of-life

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build_and_test.yml
src/: components.rs  constants.rs  convolution.rs  entities.rs  main.rs  resources.rs  rules.rs  universe.rs
src/systems/: input_system.rs  rendering_system.rs
