[package]
name = "rust-game-of-life"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.7.0"
specs = { version = "0.17.0", features = ["specs-derive"] }
glam = "0.20.0"
rand = "0.8.3"
num = "0.4.0"
nalgebra =  { version = "0.30.0", features = ["rand"] }
